--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@ table {
 
 html, body {
     width: 100%;
-    height: 100%;
+    min-height: 100%;
     margin: 0;
     padding: 0;
 }
@@ -95,7 +95,7 @@ body {
 
 main {
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -106,6 +106,15 @@ main {
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+/* Change direction on mobile screens */
+@media screen and (max-width: 600px) {
+    .first-section {
+        flex-direction: column;
+        text-align: center;
+        padding-top: 10vh;
+    }
 }
 
 h1 {
@@ -164,6 +173,7 @@ b::before {
 .second-section {
     margin-top: 3em;
     text-align: center;
+    margin-bottom: 10vh;
 }
 
 .second-section h2 {
